Fix spacing issues on product pages

--- a/components/project/description/styles.module.css
+++ b/components/project/description/styles.module.css
@@ -2,6 +2,7 @@
 
 .content {
   display: flex;
+  margin-bottom: 10vh;
 }
 
 @media (--small) {
