--- a/components/project/intro/styles.module.css
+++ b/components/project/intro/styles.module.css
@@ -2,13 +2,12 @@
 
 .cover {
   display: flex;
-  margin-bottom: 20vh;
+  margin-bottom: 10vh;
 }
 
 @media (--small) {
   .cover {
     flex-direction: column-reverse;
-    margin-bottom: 10vh;
   }
 }
 
